--- a/css/style.css
+++ b/css/style.css
@@ -33,16 +33,22 @@ header .my-logo:hover {
     cursor: pointer;
 }
 
+header nav .nav-h {
+    padding: 0 0.5rem;
+}
+
 header nav .nav-h:hover {
     background-color: lightgray;
-    scale: 1.2;
     border-radius: 15px;
     color: var(--bs-primary);
-    padding: 0 0.5rem;
 }
 
 .nav-img-h:hover {
     scale: 1.3;
+}
+
+.myDisplay {
+    display: block;
 }
 
 .bg-primary {
